fixed all layout issues, q/a issues, errors.

--- a/src/components/article-interview/article-interview.styles.scss
+++ b/src/components/article-interview/article-interview.styles.scss
@@ -12,6 +12,10 @@
 
   &__answer {
 
+    p {
+      margin-bottom: 1rem;
+    }
+
     ul,ol {
       padding-left: 4rem;
     }
